@@ -1,4 +1,4 @@
 module HaveAPI
-  PROTOCOL_VERSION = '1.0'
+  PROTOCOL_VERSION = '1.1'
   VERSION = '0.6.0'
 end
