@@ -1,3 +1,5 @@
+- Blocking actions
+
 * Tue Oct 18 2016 - version 0.6.0
 - Token authentication: fix output of action renew
 - ActiveRecord: fix parsing of includes
